# traffic-control-system

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.claude/: settings.json
PhaseCDoc/: igroup.md  submission_checklist.md  vgroup.md
SPIN/: README.md
SPIN/i-group/: README.md  pan.b  pan.c  pan.m  phase_c_model.pml  run_i_group.sh
SPIN/v-group/: README.md  _spin_nvr.tmp  pan  pan.h  pan.t  run_v_group.sh
Spec/: 723Spring26ProjectOverview.adoc
include/common/: Grid.h  Intersection.h  Point.h  Protocol.h  Road.h  SimulationStats.h  Vehicle.h
include/infrastructure/: InfrastructureAgent.h
include/vehicle/: VehicleAgent.h
outputs/: infrastructure_sim_output.txt  log_file_report.txt  vehicle_sim_output.txt
scripts/: detect_square_uturn.awk  find_max_throughput.sh
src/common/: Grid.cpp  Intersection.cpp  Road.cpp  TrafficLight.cpp  Vehicle.cpp
src/infrastructure/: InfrastructureAgent.cpp  main.cpp
src/throughput/: main.cpp
src/vehicle/: VehicleAgent.cpp  main.cpp
tests/: test_infrastructure.cpp  test_vehicle_agent.cpp
traffic-control-system-main/: README.md
traffic-control-system-main/Tests/: test_infrastructure.cpp
traffic-control-system-main/include/common/: Intersection.h  Protocol.h  Road.h  TrafficLight.h  Vehicle.h
traffic-control-system-main/src/common/: Intersection.cpp  Road.cpp  Vehicle.cpp
traffic-control-system-main/src/infrastructure/: InfrastructureAgent.cpp
traffic-control-system-main/src/vehicle/: Vehicle.cpp  VehicleAgent.cpp
verification/spin/: .gitignore  full_implementation_execution_plan.md  implementation_plan.md  pan_bs  pan_safety  phaseB_p2_test_report.md  phaseB_todo.md  phaseC_todo.md  phase_b_model.pml  phase_b_plan.md  phase_c_model.pml  phase_c_model_nveh2_backup.pml  phase_c_model_slotn3_backup.pml  phase_c_results.txt  phase_c_vgroup_report.md  priority5_abstraction_rationale.md  run_phase_c.sh  run_phase_c_stash.sh  simple_test.pml  simple_test_report.md  single_intersection_model.pml  step_by_step_plan.md
